# smtp-mail-ng

./: .gitignore  smtp-mail-ng.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/flag-cache/: smtp-mail-ng-0.1.0.2-CIyFIrsBIyUAtzFAYLpE1E
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/lib/x86_64-linux-ghc-8.0.2/smtp-mail-ng-0.1.0.2-CIyFIrsBIyUAtzFAYLpE1E/Network/Mail/SMTP/: Auth.dyn_hi  ReplyLine.dyn_hi  SMTP.dyn_hi  SMTPParameters.dyn_hi  SMTPRaw.dyn_hi  Send.dyn_hi  Types.dyn_hi
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/pkgdb/: package.cache  smtp-mail-ng-0.1.0.2-CIyFIrsBIyUAtzFAYLpE1E.conf
.stack-work/intero/: intero28048gMv.hs
Network/Mail/SMTP/: Auth.hs  ReplyLine.hs  SMTP.hs  SMTPParameters.hs  SMTPRaw.hs  Send.hs  Types.hs
