
name:                smtp-mail-ng
version:             0.1.0.2
synopsis:            An SMTP client EDSL
description:         An SMTP client EDSL
homepage:            https://github.com/avieth/smtp-mail-ng
license:             BSD3
license-file:        LICENSE
author:              Alexander Vieth
maintainer:          aovieth@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md

source-repository head
  type: git
  location: git@github.com:avieth/smtp-mail-ng.git

library
  exposed-modules:
      Network.Mail.SMTP.Send
      Network.Mail.SMTP.Auth
      Network.Mail.SMTP.SMTPParameters
      Network.Mail.SMTP.ReplyLine
      Network.Mail.SMTP.Types
      Network.Mail.SMTP.SMTP
      Network.Mail.SMTP.SMTPRaw
  -- hs-source-dirs:      
  -- other-modules:       
  other-extensions: 
      GeneralizedNewtypeDeriving
      OverloadedStrings
      RecordWildCards
      ScopedTypeVariables
  build-depends: base >=4.7 && <5
               , network >=2.6 && <2.7
               , mime-mail >=0.4 && <0.5
               , transformers >= 0.2
               , transformers-compat >= 0.3
               , bytestring >=0.10 && <0.11
               , haskeline >=0.7 && <0.8
               , mtl >=2.0 && <2.3
               , attoparsec >=0.12 && <0.14
               , filepath >=1.3 && <1.5
               , text >=1.2 && <1.3
               , cryptohash >=0.11 && <0.12
               , base16-bytestring >=0.1 && <0.2
               , base64-bytestring >=1.0 && <1.1
               , tls >=1.3.9 && <1.5
               , x509-system >=1.5 && <1.7
               , x509-store >=1.5 && <1.7
               , crypto-random >=0.0 && <0.1
               , stringsearch >= 0.3.6.5
  default-language:    Haskell2010
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-name-shadowing
  
