
name:                smtp-mail-ng
version:             0.1.0.2
synopsis:            An SMTP client EDSL
description:         An SMTP client EDSL
homepage:            https://github.com/avieth/smtp-mail-ng
license:             BSD3
license-file:        LICENSE
author:              Alexander Vieth
maintainer:          aovieth@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md

source-repository head
  type: git
  location: git@github.com:avieth/smtp-mail-ng.git

library
  exposed-modules:
      Network.Mail.SMTP.Send
      Network.Mail.SMTP.Auth
      Network.Mail.SMTP.SMTPParameters
      Network.Mail.SMTP.ReplyLine
      Network.Mail.SMTP.Types
      Network.Mail.SMTP.SMTP
      Network.Mail.SMTP.SMTPRaw
  -- hs-source-dirs:      
  -- other-modules:       
  other-extensions: 
      GeneralizedNewtypeDeriving
      OverloadedStrings
      RecordWildCards
      ScopedTypeVariables
  build-depends: base >=4.7 && <5
               , network >=2.6 && <3
               -- TODO: for versions of network >= 3,
               -- 'network-bsd' is split off as a separate package from
               -- 'network'.
               , connection
               , data-default
               -- conn >~ 0.2.8, ~< -0.3.1
               , mime-mail >=0.4 && <=0.5.0
               , transformers >= 0.2
               -- ^ used only for Control.Monad.Trans.Except
               , bytestring >=0.10 && <0.11
               , mtl >=2.0 && <2.3
               , attoparsec >=0.12 && <0.14
               , filepath >=1.3 && <1.5
               , text >=1.2 && <1.3
               , cryptonite
               , memory
               -- ^ used only for Data.ByteArray.Encoding
               , base64-bytestring >=1.0 && <1.1
               , stringsearch >= 0.3.6.5
  default-language:    Haskell2010
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-name-shadowing
  
